--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^1.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "use-debounce": "^10.0.3",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
