--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-img-mapper": "^1.5.1",
     "use-debounce": "^10.0.3",
     "zustand": "^4.5.5"
   },
