--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@sentry/react": "^8.36.0",
     "@vercel/analytics": "^1.3.1",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
