--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@sentry/react": "^8.36.0",
+    "@sentry/vite-plugin": "^2.22.6",
     "@vercel/analytics": "^1.3.1",
+    "envalid": "^8.0.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
