--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sentry/react": "^8.36.0",
     "@sentry/vite-plugin": "^2.22.6",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.14",
     "envalid": "^8.0.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
