--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@analytics/google-analytics": "^1.0.7",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@sentry/react": "^8.36.0",
     "@sentry/vite-plugin": "^2.22.6",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.14",
+    "analytics": "^0.8.14",
     "envalid": "^8.0.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
