--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@emotion/styled": "^11.13.0",
     "@sentry/react": "^8.36.0",
     "@sentry/vite-plugin": "^2.22.6",
-    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.14",
     "envalid": "^8.0.0",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "use-debounce": "^10.0.3",
     "zustand": "^4.5.5"
   },
